--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,3 +6,9 @@
   <li><%= link_to "Destroy", article_path(@article), method: :delete,
   data: { confirm: "Are you sure?" }%></li>
 </ul>
+
+<h2>Comments</h2>
+<%= render @article.comments %>
+
+<h2>Add a comment:</h2>
+<%= render 'comments/form' %>
